capture and dependencies

--- a/When_Should_School_Start?.ipynb
+++ b/When_Should_School_Start?.ipynb
@@ -84,9 +84,14 @@
       ],
       "source": [
         "#@title Setup Environment\n",
+        "\n",
+        "%%capture\n",
+        "\n",
+        "!pip install dash\n",
         "!pip install astral\n",
         "!pip install timezonefinder\n",
         "!pip uninstall -y circadian\n",
+        "!pip install dash-bootstrap-components\n",
         "!pip install --upgrade git+https://github.com/ftavella/circadian.git@school_light_schedule"
       ]
     },
@@ -97,6 +102,9 @@
       "outputs": [],
       "source": [
         "#@title Import Libraries\n",
+        "\n",
+        "%%capture\n",
+        "\n",
         "import dash\n",
         "import pytz\n",
         "import numpy as np\n",
