add instructions and collapse all

--- a/When_Should_School_Start?.ipynb
+++ b/When_Should_School_Start?.ipynb
@@ -15,10 +15,11 @@
       "metadata": {},
       "source": [
         "# Welcome to the sheet\n",
-        "Instructions\n",
-        "Very pretty\n",
         "\n",
-        "Make a copy and interact with this to understand school start times from a circadian perspective"
+        "Make a copy and interact with this to understand school start times from a circadian perspective\n",
+        "\n",
+        "Instructions: under construction\n",
+        "Notes: Current estimates from simulations are biased towards the default initial condition. TODO: Add an equilibration simulation to get rid of this bias."
       ]
     },
     {
@@ -84,11 +85,10 @@
       ],
       "source": [
         "#@title Setup Environment\n",
-        "\n",
         "%%capture\n",
-        "\n",
         "!pip install dash\n",
         "!pip install astral\n",
+        "!pip install pysolar\n",
         "!pip install timezonefinder\n",
         "!pip uninstall -y circadian\n",
         "!pip install dash-bootstrap-components\n",
@@ -102,9 +102,7 @@
       "outputs": [],
       "source": [
         "#@title Import Libraries\n",
-        "\n",
         "%%capture\n",
-        "\n",
         "import dash\n",
         "import pytz\n",
         "import numpy as np\n",
@@ -126,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -333,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
@@ -351,7 +349,7 @@
               "        "
             ],
             "text/plain": [
-              "<IPython.lib.display.IFrame at 0x7f57a04b04a0>"
+              "<IPython.lib.display.IFrame at 0x7f57894acbf0>"
             ]
           },
           "metadata": {},
@@ -362,12 +360,15 @@
           "output_type": "stream",
           "text": [
             "Gathering light information for Chronia on 2025-03-20 12:00:00\n",
-            "Running 2 simulations at Chronia, school start time range: [6, 12], date: 2025-03-20\n",
+            "Running simulation at Chronia, school start time: 08:30, date: 2025-03-20\n",
+            "Running 7 simulations at Chronia, school start time range: [6, 12], date: 2025-03-20\n",
             "Simulating for school start time: 6.0\n",
-            "Simulating for school start time: 12.0\n",
-            "(4800,)\n",
-            "(4800,)\n",
-            "(4800,)\n"
+            "Simulating for school start time: 7.0\n",
+            "Simulating for school start time: 8.0\n",
+            "Simulating for school start time: 9.0\n",
+            "Simulating for school start time: 10.0\n",
+            "Simulating for school start time: 11.0\n",
+            "Simulating for school start time: 12.0\n"
           ]
         }
       ],
