--- a/When_Should_School_Start.ipynb
+++ b/When_Should_School_Start.ipynb
@@ -1,6 +1,33 @@
 {
   "cells": [
     {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ftavella/when_should_school_start/blob/main/When_Should_School_Start.ipynb\">\n",
+              "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+              "</a>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "%%html\n",
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ftavella/when_should_school_start/blob/main/When_Should_School_Start.ipynb\">\n",
+        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "OsKHpzP8_cVw"
@@ -18,13 +45,13 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "JGk_zFLRaAMX",
-        "outputId": "36dda4c1-62d8-4270-ad36-49b1a027c284",
-        "cellView": "form"
+        "outputId": "36dda4c1-62d8-4270-ad36-49b1a027c284"
       },
       "outputs": [
         {
