--- a/When_Should_School_Start?.ipynb
+++ b/When_Should_School_Start?.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -22,7 +22,7 @@
       ],
       "source": [
         "%%html\n",
-        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ftavella/when_should_school_start/blob/main/When_Should_School_Start.ipynb\">\n",
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ftavella/when_should_school_start/blob/main/When_Should_School_Start?.ipynb\">\n",
         "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
         "</a>"
       ]
