--- a/numba_version.ipynb
+++ b/numba_version.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ftavella/when_should_school_start/blob/main/numba_version.ipynb\">\n",
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ftavella/when_should_school_start/blob/main/When_Should_School_Start.ipynb\">\n",
         "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
         "</a>"
       ]
@@ -39,10 +39,10 @@
       "source": [
         "#@title Setup Environment\n",
         "%%capture\n",
-        "# TODO: Check that fortran is installed\n",
         "!pip install dash\n",
         "!pip install astral\n",
         "!pip install pysolar\n",
+        "!pip install numbalsoda\n",
         "!pip install timezonefinder\n",
         "!pip uninstall -y circadian\n",
         "!pip install dash-bootstrap-components\n",
@@ -769,7 +769,9 @@
             "Simulating for school start time: 9.0\n",
             "Simulating for school start time: 10.0\n",
             "Simulating for school start time: 11.0\n",
-            "Simulating for school start time: 12.0\n"
+            "Simulating for school start time: 12.0\n",
+            "Gathering light information for Chronia on 2025-04-02 12:00:00\n",
+            "Gathering light information for Chronia on 2025-04-02 12:00:00\n"
           ]
         }
       ],
