--- a/school_start_times.ipynb
+++ b/school_start_times.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ftavella/when_should_school_start/blob/main/numba_version.ipynb\">\n",
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ftavella/when_should_school_start/blob/main/school_start_times.ipynb\">\n",
         "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
         "</a>"
       ]
@@ -531,6 +531,134 @@
           },
           "metadata": {},
           "output_type": "display_data"
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[2025-04-04 16:12:42,668] ERROR in app: Exception on /_dash-update-component [POST]\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/Users/ftavella/arcascope/when_should_school_start/.venv/lib/python3.13/site-packages/flask/app.py\", line 1473, in wsgi_app\n",
+            "    response = self.full_dispatch_request()\n",
+            "  File \"/Users/ftavella/arcascope/when_should_school_start/.venv/lib/python3.13/site-packages/flask/app.py\", line 882, in full_dispatch_request\n",
+            "    rv = self.handle_user_exception(e)\n",
+            "  File \"/Users/ftavella/arcascope/when_should_school_start/.venv/lib/python3.13/site-packages/flask/app.py\", line 880, in full_dispatch_request\n",
+            "    rv = self.dispatch_request()\n",
+            "  File \"/Users/ftavella/arcascope/when_should_school_start/.venv/lib/python3.13/site-packages/flask/app.py\", line 865, in dispatch_request\n",
+            "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]\n",
+            "           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^\n",
+            "  File \"/Users/ftavella/arcascope/when_should_school_start/.venv/lib/python3.13/site-packages/dash/dash.py\", line 1405, in dispatch\n",
+            "    ctx.run(\n",
+            "    ~~~~~~~^\n",
+            "        functools.partial(\n",
+            "        ^^^^^^^^^^^^^^^^^^\n",
+            "    ...<7 lines>...\n",
+            "        )\n",
+            "        ^\n",
+            "    )\n",
+            "    ^\n",
+            "  File \"/Users/ftavella/arcascope/when_should_school_start/.venv/lib/python3.13/site-packages/dash/_callback.py\", line 547, in add_context\n",
+            "    flat_output_values = flatten_grouping(output_value, output)\n",
+            "  File \"/Users/ftavella/arcascope/when_should_school_start/.venv/lib/python3.13/site-packages/dash/_grouping.py\", line 35, in flatten_grouping\n",
+            "    validate_grouping(grouping, schema)\n",
+            "    ~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/ftavella/arcascope/when_should_school_start/.venv/lib/python3.13/site-packages/dash/_grouping.py\", line 211, in validate_grouping\n",
+            "    SchemaLengthValidationError.check(grouping, full_schema, path, len(schema))\n",
+            "    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/Users/ftavella/arcascope/when_should_school_start/.venv/lib/python3.13/site-packages/dash/_grouping.py\", line 180, in check\n",
+            "    raise SchemaLengthValidationError(value, full_schema, path, expected_len)\n",
+            "dash._grouping.SchemaLengthValidationError: Schema: [<Output `sunrise_sunset_plot.figure`>, <Output `average_sleep_plot.figure`>, <Output `minimum_sleep_plot.figure`>]\n",
+            "                Path: ()\n",
+            "                Expected length: 3\n",
+            "                Received value of length 2:\n",
+            "                    [Figure({\n",
+            "    'data': [{'hovertemplate': '<extra></extra>',\n",
+            "              'legendgroup': '',\n",
+            "              'line': {'color': '#636efa', 'dash': 'solid'},\n",
+            "              'marker': {'symbol': 'circle'},\n",
+            "              'mode': 'lines',\n",
+            "              'name': '',\n",
+            "              'orientation': 'v',\n",
+            "              'showlegend': False,\n",
+            "              'type': 'scatter',\n",
+            "              'xaxis': 'x',\n",
+            "              'yaxis': 'y'}],\n",
+            "    'layout': {'legend': {'tracegroupgap': 0},\n",
+            "               'margin': {'t': 60},\n",
+            "               'template': '...',\n",
+            "               'xaxis': {'anchor': 'y', 'domain': [0.0, 1.0]},\n",
+            "               'yaxis': {'anchor': 'x', 'domain': [0.0, 1.0]}}\n",
+            "}), Figure({\n",
+            "    'data': [{'hovertemplate': '<extra></extra>',\n",
+            "              'legendgroup': '',\n",
+            "              'line': {'color': '#636efa', 'dash': 'solid'},\n",
+            "              'marker': {'symbol': 'circle'},\n",
+            "              'mode': 'lines',\n",
+            "              'name': '',\n",
+            "              'orientation': 'v',\n",
+            "              'showlegend': False,\n",
+            "              'type': 'scatter',\n",
+            "              'xaxis': 'x',\n",
+            "              'yaxis': 'y'}],\n",
+            "    'layout': {'legend': {'tracegroupgap': 0},\n",
+            "               'margin': {'t': 60},\n",
+            "               'template': '...',\n",
+            "               'xaxis': {'anchor': 'y', 'domain': [0.0, 1.0]},\n",
+            "               'yaxis': {'anchor': 'x', 'domain': [0.0, 1.0]}}\n",
+            "})]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Error getting city info: HTTPSConnectionPool(host='nominatim.openstreetmap.org', port=443): Max retries exceeded with url: /search?q=Chicago&format=json&limit=1 (Caused by ReadTimeoutError(\"HTTPSConnectionPool(host='nominatim.openstreetmap.org', port=443): Read timed out. (read timeout=1)\"))\n",
+            "Error!\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[2025-04-04 16:12:43,453] ERROR in app: Exception on /_dash-update-component [POST]\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/Users/ftavella/arcascope/when_should_school_start/.venv/lib/python3.13/site-packages/flask/app.py\", line 1473, in wsgi_app\n",
+            "    response = self.full_dispatch_request()\n",
+            "  File \"/Users/ftavella/arcascope/when_should_school_start/.venv/lib/python3.13/site-packages/flask/app.py\", line 882, in full_dispatch_request\n",
+            "    rv = self.handle_user_exception(e)\n",
+            "  File \"/Users/ftavella/arcascope/when_should_school_start/.venv/lib/python3.13/site-packages/flask/app.py\", line 880, in full_dispatch_request\n",
+            "    rv = self.dispatch_request()\n",
+            "  File \"/Users/ftavella/arcascope/when_should_school_start/.venv/lib/python3.13/site-packages/flask/app.py\", line 865, in dispatch_request\n",
+            "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]\n",
+            "           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^\n",
+            "  File \"/Users/ftavella/arcascope/when_should_school_start/.venv/lib/python3.13/site-packages/dash/dash.py\", line 1405, in dispatch\n",
+            "    ctx.run(\n",
+            "    ~~~~~~~^\n",
+            "        functools.partial(\n",
+            "        ^^^^^^^^^^^^^^^^^^\n",
+            "    ...<7 lines>...\n",
+            "        )\n",
+            "        ^\n",
+            "    )\n",
+            "    ^\n",
+            "  File \"/Users/ftavella/arcascope/when_should_school_start/.venv/lib/python3.13/site-packages/dash/_callback.py\", line 529, in add_context\n",
+            "    raise err\n",
+            "  File \"/Users/ftavella/arcascope/when_should_school_start/.venv/lib/python3.13/site-packages/dash/_callback.py\", line 518, in add_context\n",
+            "    output_value = _invoke_callback(func, *func_args, **func_kwargs)\n",
+            "  File \"/Users/ftavella/arcascope/when_should_school_start/.venv/lib/python3.13/site-packages/dash/_callback.py\", line 47, in _invoke_callback\n",
+            "    return func(*args, **kwargs)  # %% callback invoked %%\n",
+            "  File \"/var/folders/pt/09ybq2w115d5wmry3zky5qhm0000gn/T/ipykernel_84336/3654524009.py\", line 136, in update_light_plots\n",
+            "    sunrise_values.append(lux_params['sunrise_hour'])\n",
+            "                          ~~~~~~~~~~^^^^^^^^^^^^^^^^\n",
+            "TypeError: 'NoneType' object is not subscriptable\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Error getting city info: HTTPSConnectionPool(host='nominatim.openstreetmap.org', port=443): Max retries exceeded with url: /search?q=Chicago&format=json&limit=1 (Caused by ReadTimeoutError(\"HTTPSConnectionPool(host='nominatim.openstreetmap.org', port=443): Read timed out. (read timeout=1)\"))\n"
+          ]
         }
       ],
       "source": [
