separate app definition from run

--- a/school_start_times.ipynb
+++ b/school_start_times.ipynb
@@ -499,20 +499,9 @@
         "    elif start_time < 1:\n",
         "        return \"12 PM\"\n",
         "    else:\n",
-        "        return f\"{int(start_time - 12)} PM\""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
-        "id": "-5j9Ypd3_cV0",
-        "outputId": "df935449-9f65-4ba0-a6a4-280fcab95fd7"
-      },
-      "outputs": [],
-      "source": [
-        "#@title Run application\n",
+        "        return f\"{int(start_time - 12)} PM\"\n",
+        "\n",
+        "\n",
         "app = dash.Dash(external_stylesheets=[dbc.themes.BOOTSTRAP])\n",
         "\n",
         "# Location and date selection\n",
@@ -757,10 +746,17 @@
         "        )\n",
         "    )\n",
         "\n",
-        "    return sunrise_sunset_fig, average_sleep_fig, minimum_sleep_fig\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    app.run(jupyter_width=\"100%\")"
+        "    return sunrise_sunset_fig, average_sleep_fig, minimum_sleep_fig"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#@title Run application\n",
+        "app.run(jupyter_width=\"100%\")"
       ]
     }
   ],
