--- a/school_start_times.ipynb
+++ b/school_start_times.ipynb
@@ -2,7 +2,9 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "qYbOTdNy5JiZ"
+      },
       "source": [
         "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ftavella/when_should_school_start/blob/main/school_start_times.ipynb\">\n",
         "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
@@ -31,12 +33,8 @@
       "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "collapsed": true,
-        "id": "JGk_zFLRaAMX",
-        "outputId": "36dda4c1-62d8-4270-ad36-49b1a027c284"
+        "id": "JGk_zFLRaAMX"
       },
       "outputs": [],
       "source": [
@@ -119,7 +117,7 @@
         "\n",
         "DEFAULT_INITIAL_CONDITION = np.array(\n",
         "    [0.23995682, -1.1547196, 0.50529415, 12.83846474, 0.0]\n",
-        "    ) \n",
+        "    )\n",
         "\n",
         "class ModelParameters:\n",
         "    def __init__(self, parameter_dict: dict=DEFAULT_MODEL_PARAMETERS):\n",
@@ -134,9 +132,9 @@
         "    return baseline_lux + amplitude * (rise + set)\n",
         "outdoor_light_fn = np.vectorize(outdoor_light_fn)\n",
         "\n",
-        "def current_light(t, day_duration=24.0, \n",
+        "def current_light(t, day_duration=24.0,\n",
         "                  school_start_time=DEFAULT_MODEL_PARAMETERS['school_start_time'],\n",
-        "                  school_prep_duration=DEFAULT_MODEL_PARAMETERS['school_prep_duration'], \n",
+        "                  school_prep_duration=DEFAULT_MODEL_PARAMETERS['school_prep_duration'],\n",
         "                  school_duration=DEFAULT_MODEL_PARAMETERS['school_duration'],\n",
         "                  outdoor_peak_lux=DEFAULT_MODEL_PARAMETERS['outdoor_peak_lux'],\n",
         "                  outdoor_light_sunrise_time=DEFAULT_MODEL_PARAMETERS['outdoor_light_sunrise_time'],\n",
@@ -148,8 +146,8 @@
         "                  ):\n",
         "    is_weekday = (t / day_duration) % 7 < 5\n",
         "    time_of_day = t % day_duration\n",
-        "    outdoor_light = outdoor_light_fn(time_of_day, outdoor_light_sunrise_time, \n",
-        "                                    outdoor_light_sunset_time, outdoor_peak_lux, \n",
+        "    outdoor_light = outdoor_light_fn(time_of_day, outdoor_light_sunrise_time,\n",
+        "                                    outdoor_light_sunset_time, outdoor_peak_lux,\n",
         "                                    outdoor_baseline_lux, outdoor_light_slope)\n",
         "    if is_weekday:\n",
         "        # school schedule\n",
@@ -198,9 +196,9 @@
         "        return baseline_lux + amplitude * (rise + set)\n",
         "\n",
         "\n",
-        "    def _current_light(t, day_duration=24.0, \n",
+        "    def _current_light(t, day_duration=24.0,\n",
         "                       school_start_time=school_start_time,\n",
-        "                       school_prep_duration=school_prep_duration, \n",
+        "                       school_prep_duration=school_prep_duration,\n",
         "                       school_duration=school_duration,\n",
         "                       outdoor_peak_lux=outdoor_peak_lux,\n",
         "                       outdoor_light_sunrise_time=outdoor_light_sunrise_time,\n",
@@ -212,8 +210,8 @@
         "                       ):\n",
         "        is_weekday = (t / day_duration) % 7 < 5\n",
         "        time_of_day = t % day_duration\n",
-        "        outdoor_light = _outdoor_light(time_of_day, outdoor_light_sunrise_time, \n",
-        "                                       outdoor_light_sunset_time, outdoor_peak_lux, \n",
+        "        outdoor_light = _outdoor_light(time_of_day, outdoor_light_sunrise_time,\n",
+        "                                       outdoor_light_sunset_time, outdoor_peak_lux,\n",
         "                                       outdoor_baseline_lux, outdoor_light_slope)\n",
         "        if is_weekday:\n",
         "            # school schedule\n",
@@ -251,7 +249,7 @@
         "    # sleep state\n",
         "    linear_term = c20 + alpha21 * xc + alpha22 * x\n",
         "    quadratic_term = beta21 * xc * xc + beta22 * xc * x + beta23 * x * x\n",
-        "    C = linear_term + quadratic_term \n",
+        "    C = linear_term + quadratic_term\n",
         "    H_plus = H0 + 0.5 * Delta + ca * C\n",
         "    H_minus = H0 - 0.5 * Delta + ca * C\n",
         "    threshold = H_plus * (1.0 - S) + H_minus * S\n",
@@ -482,7 +480,7 @@
         "        mp.school_lux, mp.school_prep_lux, mp.outdoor_baseline_lux, mp.outdoor_light_slope,\n",
         "    ])\n",
         "    function_pointer = rhs.address\n",
-        "    solution = lsoda(function_pointer, initial_condition, time, \n",
+        "    solution = lsoda(function_pointer, initial_condition, time,\n",
         "                    data=params, atol=atol, rtol=rtol)\n",
         "\n",
         "    _, _, _, _, sleep = solution[0].T\n",
@@ -528,13 +526,13 @@
         "# Sleep metrics plots\n",
         "sleep_metrics_plots = dbc.Spinner(color=\"primary\", children=\n",
         "    dbc.Row([\n",
-        "        dbc.Col([ \n",
+        "        dbc.Col([\n",
         "            dcc.Graph(figure=px.line(), id=\"sunrise_sunset_plot\"),\n",
         "        ], width=4),\n",
-        "        dbc.Col([ \n",
+        "        dbc.Col([\n",
         "            dcc.Graph(figure=px.line(), id=\"average_sleep_plot\"),\n",
         "        ], width=4),\n",
-        "        dbc.Col([ \n",
+        "        dbc.Col([\n",
         "            dcc.Graph(figure=px.line(), id=\"minimum_sleep_plot\"),\n",
         "        ], width=4),\n",
         "    ])\n",
@@ -554,7 +552,7 @@
         "     State(\"dst\", \"value\")],\n",
         "     prevent_initial_call=False,\n",
         ")\n",
-        "def update_light_plots(n_clicks, location, dst, year=2025, school_start_times_range=(6, 13), \n",
+        "def update_light_plots(n_clicks, location, dst, year=2025, school_start_times_range=(6, 13),\n",
         "                       number_of_school_start_times=10):\n",
         "    # Gather lux params throughout the year\n",
         "    lux_params_throughout_year = []\n",
@@ -582,17 +580,17 @@
         "    if error_flag:\n",
         "        print(\"Error!\")\n",
         "        return px.line(), px.line()\n",
-        "    \n",
+        "\n",
         "    school_start_times = np.linspace(school_start_times_range[0],\n",
         "                                     school_start_times_range[1],\n",
         "                                     number_of_school_start_times)\n",
         "\n",
         "    average_sleep_duration_result = []\n",
-        "    \n",
+        "\n",
         "    for start_time in school_start_times:\n",
         "        # Equilibrate simulation\n",
         "        equilibration_lux_params = lux_params_throughout_year[0]\n",
-        "        _, equilibration_solution, _, _ = simulate_school_start_time(start_time, equilibration_lux_params, \n",
+        "        _, equilibration_solution, _, _ = simulate_school_start_time(start_time, equilibration_lux_params,\n",
         "                                                                     weeks_to_simulate=2)\n",
         "        # Simulate throughout the year\n",
         "        current_initial_condition = equilibration_solution[0].T[:, -1]\n",
@@ -609,8 +607,8 @@
         "                # skip winter months\n",
         "                if month in [6, 7, 8]:\n",
         "                    continue\n",
-        "           # Simulate \n",
-        "            _, solution, sleep_onset, sleep_offset = simulate_school_start_time(start_time, lux_params, \n",
+        "           # Simulate\n",
+        "            _, solution, sleep_onset, sleep_offset = simulate_school_start_time(start_time, lux_params,\n",
         "                                                                                initial_condition=current_initial_condition,\n",
         "                                                                                weeks_to_simulate=2)\n",
         "            average_sleep = np.mean(sleep_offset - sleep_onset)\n",
@@ -752,7 +750,10 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "cellView": "form",
+        "id": "jtjSVAdD5Jib"
+      },
       "outputs": [],
       "source": [
         "#@title Run application\n",
