fix x labels and docs

--- a/school_start_times.ipynb
+++ b/school_start_times.ipynb
@@ -22,10 +22,19 @@
         "\n",
         "This interactive dashboard models how school start times influence your sleep duration throughout the year, using simulations grounded in circadian biology. By adjusting key parameters like city and Daylight Saving Time (DST) observance, you can visualize how environmental light cues and school schedules impact your sleep.\n",
         "\n",
+        "This work is inspired by Anne Skeldon's paper: [The effects of self-selected light-dark cycles and social constraints on human sleep and circadian timing: a modeling approach](https://www.nature.com/articles/srep45158)\n",
+        "\n",
         "### What You Can Do:\n",
         "- **Select a City**: Choose any city to see local sunrise/sunset patterns and simulate their effects on student sleep.\n",
         "- **Toggle DST**: Explore scenarios with or without Daylight Saving Time to understand how it impacts wake-up times and sleep duration.\n",
-        "- **Run Simulations Year-Round**: Observe how sleep patterns change throughout the calendar year and identify optimal start times that align with healthy sleep."
+        "- **Run Simulations Year-Round**: Observe how sleep patterns change throughout the calendar year and identify optimal start times that align with healthy sleep.\n",
+        "\n",
+        "### Assumptions\n",
+        "\n",
+        "We assume that one hour is needed to prepare and travel to school, so wake up is enforced one hour before school start time.\n",
+        "\n",
+        "### Note\n",
+        "Because we are running multiple simulations, it may take a minute to load and show results!"
       ]
     },
     {
@@ -757,7 +766,7 @@
       "outputs": [],
       "source": [
         "#@title Run application\n",
-        "app.run(jupyter_width=\"100%\")"
+        "app.run(jupyter_width=\"100%\", host='127.0.0.1', port=8050, debug=True)"
       ]
     }
   ],
