--- a/school_start_times.ipynb
+++ b/school_start_times.ipynb
@@ -39,13 +39,136 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "cellView": "form",
         "collapsed": true,
         "id": "JGk_zFLRaAMX"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: dash in ./.venv/lib/python3.13/site-packages (3.0.2)\n",
+            "Requirement already satisfied: Flask<3.1,>=1.0.4 in ./.venv/lib/python3.13/site-packages (from dash) (3.0.3)\n",
+            "Requirement already satisfied: Werkzeug<3.1 in ./.venv/lib/python3.13/site-packages (from dash) (3.0.6)\n",
+            "Requirement already satisfied: plotly>=5.0.0 in ./.venv/lib/python3.13/site-packages (from dash) (6.0.1)\n",
+            "Requirement already satisfied: importlib-metadata in ./.venv/lib/python3.13/site-packages (from dash) (8.6.1)\n",
+            "Requirement already satisfied: typing-extensions>=4.1.1 in ./.venv/lib/python3.13/site-packages (from dash) (4.13.0)\n",
+            "Requirement already satisfied: requests in ./.venv/lib/python3.13/site-packages (from dash) (2.32.3)\n",
+            "Requirement already satisfied: retrying in ./.venv/lib/python3.13/site-packages (from dash) (1.3.4)\n",
+            "Requirement already satisfied: nest-asyncio in ./.venv/lib/python3.13/site-packages (from dash) (1.6.0)\n",
+            "Requirement already satisfied: setuptools in ./.venv/lib/python3.13/site-packages (from dash) (78.1.0)\n",
+            "Requirement already satisfied: Jinja2>=3.1.2 in ./.venv/lib/python3.13/site-packages (from Flask<3.1,>=1.0.4->dash) (3.1.6)\n",
+            "Requirement already satisfied: itsdangerous>=2.1.2 in ./.venv/lib/python3.13/site-packages (from Flask<3.1,>=1.0.4->dash) (2.2.0)\n",
+            "Requirement already satisfied: click>=8.1.3 in ./.venv/lib/python3.13/site-packages (from Flask<3.1,>=1.0.4->dash) (8.1.8)\n",
+            "Requirement already satisfied: blinker>=1.6.2 in ./.venv/lib/python3.13/site-packages (from Flask<3.1,>=1.0.4->dash) (1.9.0)\n",
+            "Requirement already satisfied: narwhals>=1.15.1 in ./.venv/lib/python3.13/site-packages (from plotly>=5.0.0->dash) (1.33.0)\n",
+            "Requirement already satisfied: packaging in ./.venv/lib/python3.13/site-packages (from plotly>=5.0.0->dash) (24.2)\n",
+            "Requirement already satisfied: MarkupSafe>=2.1.1 in ./.venv/lib/python3.13/site-packages (from Werkzeug<3.1->dash) (3.0.2)\n",
+            "Requirement already satisfied: zipp>=3.20 in ./.venv/lib/python3.13/site-packages (from importlib-metadata->dash) (3.21.0)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in ./.venv/lib/python3.13/site-packages (from requests->dash) (3.4.1)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in ./.venv/lib/python3.13/site-packages (from requests->dash) (3.10)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in ./.venv/lib/python3.13/site-packages (from requests->dash) (2.3.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in ./.venv/lib/python3.13/site-packages (from requests->dash) (2025.1.31)\n",
+            "Requirement already satisfied: six>=1.7.0 in ./.venv/lib/python3.13/site-packages (from retrying->dash) (1.17.0)\n",
+            "\n",
+            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+            "Requirement already satisfied: astral in ./.venv/lib/python3.13/site-packages (3.2)\n",
+            "\n",
+            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+            "Requirement already satisfied: pysolar in ./.venv/lib/python3.13/site-packages (0.13)\n",
+            "Requirement already satisfied: numpy in ./.venv/lib/python3.13/site-packages (from pysolar) (2.1.3)\n",
+            "\n",
+            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+            "Requirement already satisfied: numbalsoda in ./.venv/lib/python3.13/site-packages (0.3.4)\n",
+            "Requirement already satisfied: numpy in ./.venv/lib/python3.13/site-packages (from numbalsoda) (2.1.3)\n",
+            "Requirement already satisfied: numba in ./.venv/lib/python3.13/site-packages (from numbalsoda) (0.61.0)\n",
+            "Requirement already satisfied: llvmlite<0.45,>=0.44.0dev0 in ./.venv/lib/python3.13/site-packages (from numba->numbalsoda) (0.44.0)\n",
+            "\n",
+            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+            "Requirement already satisfied: timezonefinder in ./.venv/lib/python3.13/site-packages (6.5.9)\n",
+            "Requirement already satisfied: cffi<2,>=1.15.1 in ./.venv/lib/python3.13/site-packages (from timezonefinder) (1.17.1)\n",
+            "Requirement already satisfied: h3>4 in ./.venv/lib/python3.13/site-packages (from timezonefinder) (4.2.2)\n",
+            "Requirement already satisfied: numpy<3,>=1.23 in ./.venv/lib/python3.13/site-packages (from timezonefinder) (2.1.3)\n",
+            "Requirement already satisfied: pycparser in ./.venv/lib/python3.13/site-packages (from cffi<2,>=1.15.1->timezonefinder) (2.22)\n",
+            "\n",
+            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+            "Found existing installation: circadian 1.0.2\n",
+            "Uninstalling circadian-1.0.2:\n",
+            "  Successfully uninstalled circadian-1.0.2\n",
+            "Requirement already satisfied: dash-bootstrap-components in ./.venv/lib/python3.13/site-packages (2.0.0)\n",
+            "Requirement already satisfied: dash>=3.0.0 in ./.venv/lib/python3.13/site-packages (from dash-bootstrap-components) (3.0.2)\n",
+            "Requirement already satisfied: Flask<3.1,>=1.0.4 in ./.venv/lib/python3.13/site-packages (from dash>=3.0.0->dash-bootstrap-components) (3.0.3)\n",
+            "Requirement already satisfied: Werkzeug<3.1 in ./.venv/lib/python3.13/site-packages (from dash>=3.0.0->dash-bootstrap-components) (3.0.6)\n",
+            "Requirement already satisfied: plotly>=5.0.0 in ./.venv/lib/python3.13/site-packages (from dash>=3.0.0->dash-bootstrap-components) (6.0.1)\n",
+            "Requirement already satisfied: importlib-metadata in ./.venv/lib/python3.13/site-packages (from dash>=3.0.0->dash-bootstrap-components) (8.6.1)\n",
+            "Requirement already satisfied: typing-extensions>=4.1.1 in ./.venv/lib/python3.13/site-packages (from dash>=3.0.0->dash-bootstrap-components) (4.13.0)\n",
+            "Requirement already satisfied: requests in ./.venv/lib/python3.13/site-packages (from dash>=3.0.0->dash-bootstrap-components) (2.32.3)\n",
+            "Requirement already satisfied: retrying in ./.venv/lib/python3.13/site-packages (from dash>=3.0.0->dash-bootstrap-components) (1.3.4)\n",
+            "Requirement already satisfied: nest-asyncio in ./.venv/lib/python3.13/site-packages (from dash>=3.0.0->dash-bootstrap-components) (1.6.0)\n",
+            "Requirement already satisfied: setuptools in ./.venv/lib/python3.13/site-packages (from dash>=3.0.0->dash-bootstrap-components) (78.1.0)\n",
+            "Requirement already satisfied: Jinja2>=3.1.2 in ./.venv/lib/python3.13/site-packages (from Flask<3.1,>=1.0.4->dash>=3.0.0->dash-bootstrap-components) (3.1.6)\n",
+            "Requirement already satisfied: itsdangerous>=2.1.2 in ./.venv/lib/python3.13/site-packages (from Flask<3.1,>=1.0.4->dash>=3.0.0->dash-bootstrap-components) (2.2.0)\n",
+            "Requirement already satisfied: click>=8.1.3 in ./.venv/lib/python3.13/site-packages (from Flask<3.1,>=1.0.4->dash>=3.0.0->dash-bootstrap-components) (8.1.8)\n",
+            "Requirement already satisfied: blinker>=1.6.2 in ./.venv/lib/python3.13/site-packages (from Flask<3.1,>=1.0.4->dash>=3.0.0->dash-bootstrap-components) (1.9.0)\n",
+            "Requirement already satisfied: narwhals>=1.15.1 in ./.venv/lib/python3.13/site-packages (from plotly>=5.0.0->dash>=3.0.0->dash-bootstrap-components) (1.33.0)\n",
+            "Requirement already satisfied: packaging in ./.venv/lib/python3.13/site-packages (from plotly>=5.0.0->dash>=3.0.0->dash-bootstrap-components) (24.2)\n",
+            "Requirement already satisfied: MarkupSafe>=2.1.1 in ./.venv/lib/python3.13/site-packages (from Werkzeug<3.1->dash>=3.0.0->dash-bootstrap-components) (3.0.2)\n",
+            "Requirement already satisfied: zipp>=3.20 in ./.venv/lib/python3.13/site-packages (from importlib-metadata->dash>=3.0.0->dash-bootstrap-components) (3.21.0)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in ./.venv/lib/python3.13/site-packages (from requests->dash>=3.0.0->dash-bootstrap-components) (3.4.1)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in ./.venv/lib/python3.13/site-packages (from requests->dash>=3.0.0->dash-bootstrap-components) (3.10)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in ./.venv/lib/python3.13/site-packages (from requests->dash>=3.0.0->dash-bootstrap-components) (2.3.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in ./.venv/lib/python3.13/site-packages (from requests->dash>=3.0.0->dash-bootstrap-components) (2025.1.31)\n",
+            "Requirement already satisfied: six>=1.7.0 in ./.venv/lib/python3.13/site-packages (from retrying->dash>=3.0.0->dash-bootstrap-components) (1.17.0)\n",
+            "\n",
+            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+            "Collecting git+https://github.com/ftavella/circadian.git@school_light_schedule\n",
+            "  Cloning https://github.com/ftavella/circadian.git (to revision school_light_schedule) to /private/var/folders/pt/09ybq2w115d5wmry3zky5qhm0000gn/T/pip-req-build-zoi7uh9k\n",
+            "  Running command git clone --filter=blob:none --quiet https://github.com/ftavella/circadian.git /private/var/folders/pt/09ybq2w115d5wmry3zky5qhm0000gn/T/pip-req-build-zoi7uh9k\n",
+            "  Running command git checkout -b school_light_schedule --track origin/school_light_schedule\n",
+            "  Switched to a new branch 'school_light_schedule'\n",
+            "  branch 'school_light_schedule' set up to track 'origin/school_light_schedule'.\n",
+            "  Resolved https://github.com/ftavella/circadian.git to commit 6e53092fd5e524d9748c490ca40ae140f00fbc61\n",
+            "  Installing build dependencies ... \u001b[?25ldone\n",
+            "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+            "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+            "\u001b[?25hRequirement already satisfied: fastcore in ./.venv/lib/python3.13/site-packages (from circadian==1.0.2) (1.8.0)\n",
+            "Requirement already satisfied: pandas in ./.venv/lib/python3.13/site-packages (from circadian==1.0.2) (2.2.3)\n",
+            "Requirement already satisfied: numpy in ./.venv/lib/python3.13/site-packages (from circadian==1.0.2) (2.1.3)\n",
+            "Requirement already satisfied: scipy in ./.venv/lib/python3.13/site-packages (from circadian==1.0.2) (1.15.2)\n",
+            "Requirement already satisfied: matplotlib in ./.venv/lib/python3.13/site-packages (from circadian==1.0.2) (3.10.1)\n",
+            "Requirement already satisfied: packaging in ./.venv/lib/python3.13/site-packages (from fastcore->circadian==1.0.2) (24.2)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in ./.venv/lib/python3.13/site-packages (from matplotlib->circadian==1.0.2) (1.3.1)\n",
+            "Requirement already satisfied: cycler>=0.10 in ./.venv/lib/python3.13/site-packages (from matplotlib->circadian==1.0.2) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in ./.venv/lib/python3.13/site-packages (from matplotlib->circadian==1.0.2) (4.56.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.3.1 in ./.venv/lib/python3.13/site-packages (from matplotlib->circadian==1.0.2) (1.4.8)\n",
+            "Requirement already satisfied: pillow>=8 in ./.venv/lib/python3.13/site-packages (from matplotlib->circadian==1.0.2) (11.1.0)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in ./.venv/lib/python3.13/site-packages (from matplotlib->circadian==1.0.2) (3.2.3)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in ./.venv/lib/python3.13/site-packages (from matplotlib->circadian==1.0.2) (2.9.0.post0)\n",
+            "Requirement already satisfied: pytz>=2020.1 in ./.venv/lib/python3.13/site-packages (from pandas->circadian==1.0.2) (2025.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in ./.venv/lib/python3.13/site-packages (from pandas->circadian==1.0.2) (2025.2)\n",
+            "Requirement already satisfied: six>=1.5 in ./.venv/lib/python3.13/site-packages (from python-dateutil>=2.7->matplotlib->circadian==1.0.2) (1.17.0)\n",
+            "Building wheels for collected packages: circadian\n",
+            "  Building wheel for circadian (pyproject.toml) ... \u001b[?25ldone\n",
+            "\u001b[?25h  Created wheel for circadian: filename=circadian-1.0.2-py3-none-any.whl size=46660 sha256=06aefb3be31388e5767f2f64d8b7bba13a029618c62a1340ceb5c3d816601a75\n",
+            "  Stored in directory: /private/var/folders/pt/09ybq2w115d5wmry3zky5qhm0000gn/T/pip-ephem-wheel-cache-t23ci_xj/wheels/c2/33/5f/1209ab01c6ef00209e0d86ca1884be15d76d6252066816bb69\n",
+            "Successfully built circadian\n",
+            "Installing collected packages: circadian\n",
+            "Successfully installed circadian-1.0.2\n",
+            "\n",
+            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
+            "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+          ]
+        }
+      ],
       "source": [
         "#@title Setup\n",
         "# %%capture\n",
@@ -500,13 +623,18 @@
         "    return time, solution, sleep_onset, sleep_offset\n",
         "\n",
         "def format_time_label(start_time):\n",
-        "    \"\"\"Format the time label as AM/PM.\"\"\"\n",
-        "    if start_time < 12:\n",
-        "        return f\"{int(start_time)} AM\"\n",
-        "    elif start_time < 1:\n",
-        "        return \"12 PM\"\n",
+        "    \"\"\"Format the time label as AM/PM, including half-hour increments.\"\"\"\n",
+        "    hour = int(start_time)\n",
+        "    minute = int((start_time - hour) * 60)\n",
+        "    if hour == 0:\n",
+        "        return f\"12:{minute:02d} AM\" if minute > 0 else \"12 AM\"\n",
+        "    elif hour < 12:\n",
+        "        return f\"{hour}:{minute:02d} AM\" if minute > 0 else f\"{hour} AM\"\n",
+        "    elif hour == 12:\n",
+        "        return f\"12:{minute:02d} PM\" if minute > 0 else \"12 PM\"\n",
         "    else:\n",
-        "        return f\"{int(start_time - 12)} PM\"\n",
+        "        hour -= 12\n",
+        "        return f\"{hour}:{minute:02d} PM\" if minute > 0 else f\"{hour} PM\"\n",
         "\n",
         "\n",
         "app = dash.Dash(external_stylesheets=[dbc.themes.BOOTSTRAP])\n",
@@ -763,10 +891,32 @@
         "cellView": "form",
         "id": "jtjSVAdD5Jib"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "\n",
+              "        <iframe\n",
+              "            width=\"100%\"\n",
+              "            height=\"650\"\n",
+              "            src=\"http://127.0.0.1:8050/\"\n",
+              "            frameborder=\"0\"\n",
+              "            allowfullscreen\n",
+              "            \n",
+              "        ></iframe>\n",
+              "        "
+            ],
+            "text/plain": [
+              "<IPython.lib.display.IFrame at 0x1591f39d0>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "#@title Run application\n",
-        "app.run(jupyter_width=\"100%\", host='127.0.0.1', port=8050, debug=True)"
+        "app.run(jupyter_width=\"100%\")"
       ]
     }
   ],
