keep debug mode

--- a/school_start_times.ipynb
+++ b/school_start_times.ipynb
@@ -916,7 +916,7 @@
       ],
       "source": [
         "#@title Run application\n",
-        "app.run(jupyter_width=\"100%\")"
+        "app.run(jupyter_width=\"100%\", debug=True)"
       ]
     }
   ],
