update school start time values and comment out min sleep

--- a/school_start_times.ipynb
+++ b/school_start_times.ipynb
@@ -561,13 +561,13 @@
         "    dbc.Row([\n",
         "        dbc.Col([\n",
         "            dcc.Graph(figure=px.line(), id=\"sunrise_sunset_plot\"),\n",
-        "        ], width=4),\n",
+        "        ], width=6),\n",
         "        dbc.Col([\n",
         "            dcc.Graph(figure=px.line(), id=\"average_sleep_plot\"),\n",
-        "        ], width=4),\n",
-        "        dbc.Col([\n",
-        "            dcc.Graph(figure=px.line(), id=\"minimum_sleep_plot\"),\n",
-        "        ], width=4),\n",
+        "        ], width=6),\n",
+        "        # dbc.Col([\n",
+        "        #     dcc.Graph(figure=px.line(), id=\"minimum_sleep_plot\"),\n",
+        "        # ], width=4),\n",
         "    ])\n",
         ")\n",
         "\n",
@@ -579,14 +579,15 @@
         "@app.callback(\n",
         "    [Output(\"sunrise_sunset_plot\", \"figure\"),\n",
         "     Output(\"average_sleep_plot\", \"figure\"),\n",
-        "     Output(\"minimum_sleep_plot\", \"figure\")],\n",
+        "    #  Output(\"minimum_sleep_plot\", \"figure\")\n",
+        "     ],\n",
         "    [Input(\"run_simulation\", \"n_clicks\")],\n",
         "    [State(\"location\", \"value\"),\n",
         "     State(\"dst\", \"value\")],\n",
         "     prevent_initial_call=False,\n",
         ")\n",
-        "def update_light_plots(n_clicks, location, dst, year=2025, school_start_times_range=(6, 13),\n",
-        "                       number_of_school_start_times=10):\n",
+        "def update_light_plots(n_clicks, location, dst, year=2025, school_start_times_range=(6, 10),\n",
+        "                       number_of_school_start_times=9):\n",
         "    # Gather lux params throughout the year\n",
         "    lux_params_throughout_year = []\n",
         "    dst_in_effect = bool(dst)\n",
@@ -752,39 +753,39 @@
         "    )\n",
         "\n",
         "    # Minimum sleep figure\n",
-        "    minimum_sleep_df = pd.DataFrame(average_sleep_duration_result)\n",
-        "    minimum_sleep_df['month'] = minimum_sleep_df['month'].apply(lambda x: month_names[x - 1])\n",
-        "    minimum_sleep_fig = px.line(minimum_sleep_df, x='start_time', y='minimum_sleep', color='month',\n",
-        "                                labels={'start_time': 'School start time',\n",
-        "                                        'minimum_sleep': 'Minimum sleep duration (hours)',\n",
-        "                                        'month': 'Month'},\n",
-        "                                color_discrete_sequence=discrete_colors)\n",
-        "    minimum_sleep_fig.update_traces(mode='lines+markers')\n",
-        "    minimum_sleep_fig.update_xaxes(\n",
-        "        tickvals=school_start_times,\n",
-        "        ticktext=xlabels,\n",
-        "        title_text=\"School start time\",\n",
-        "        title_font=dict(size=12),\n",
-        "        tickangle=-45,\n",
-        "    )\n",
-        "    minimum_sleep_fig.update_yaxes(\n",
-        "        dtick=0.25,\n",
-        "        tickmode='linear',\n",
-        "        title_text=\"Minimum sleep duration (hours)\",\n",
-        "        title_font=dict(size=12),\n",
-        "    )\n",
-        "    minimum_sleep_fig.update_layout(\n",
-        "        legend=dict(\n",
-        "            title=\"Month\",\n",
-        "            orientation=\"v\",\n",
-        "            yanchor=\"auto\",\n",
-        "            y=1.0,\n",
-        "            xanchor=\"right\",\n",
-        "            x=1.2,\n",
-        "        )\n",
-        "    )\n",
+        "    # minimum_sleep_df = pd.DataFrame(average_sleep_duration_result)\n",
+        "    # minimum_sleep_df['month'] = minimum_sleep_df['month'].apply(lambda x: month_names[x - 1])\n",
+        "    # minimum_sleep_fig = px.line(minimum_sleep_df, x='start_time', y='minimum_sleep', color='month',\n",
+        "    #                             labels={'start_time': 'School start time',\n",
+        "    #                                     'minimum_sleep': 'Minimum sleep duration (hours)',\n",
+        "    #                                     'month': 'Month'},\n",
+        "    #                             color_discrete_sequence=discrete_colors)\n",
+        "    # minimum_sleep_fig.update_traces(mode='lines+markers')\n",
+        "    # minimum_sleep_fig.update_xaxes(\n",
+        "    #     tickvals=school_start_times,\n",
+        "    #     ticktext=xlabels,\n",
+        "    #     title_text=\"School start time\",\n",
+        "    #     title_font=dict(size=12),\n",
+        "    #     tickangle=-45,\n",
+        "    # )\n",
+        "    # minimum_sleep_fig.update_yaxes(\n",
+        "    #     dtick=0.25,\n",
+        "    #     tickmode='linear',\n",
+        "    #     title_text=\"Minimum sleep duration (hours)\",\n",
+        "    #     title_font=dict(size=12),\n",
+        "    # )\n",
+        "    # minimum_sleep_fig.update_layout(\n",
+        "    #     legend=dict(\n",
+        "    #         title=\"Month\",\n",
+        "    #         orientation=\"v\",\n",
+        "    #         yanchor=\"auto\",\n",
+        "    #         y=1.0,\n",
+        "    #         xanchor=\"right\",\n",
+        "    #         x=1.2,\n",
+        "    #     )\n",
+        "    # )\n",
         "\n",
-        "    return sunrise_sunset_fig, average_sleep_fig, minimum_sleep_fig"
+        "    return sunrise_sunset_fig, average_sleep_fig # , minimum_sleep_fig"
       ]
     },
     {
