updarte y-axis limits

--- a/school_start_times.ipynb
+++ b/school_start_times.ipynb
@@ -785,6 +785,30 @@
         "    #     )\n",
         "    # )\n",
         "\n",
+        "    # Fix the y-axis range unless data goes over pre-determined limits\n",
+        "    sunrise_sunset_fig_y_axis_range = (4, 22)\n",
+        "    average_sleep_fig_y_axis_range = (4.75, 8.0)\n",
+        "\n",
+        "    if sunrise_sunset_fig.data[0].y.min() > sunrise_sunset_fig_y_axis_range[0]:\n",
+        "        y_min = sunrise_sunset_fig_y_axis_range[0]\n",
+        "    else:\n",
+        "        y_min = sunrise_sunset_fig.data[0].y.min()\n",
+        "    if sunrise_sunset_fig.data[0].y.max() < sunrise_sunset_fig_y_axis_range[1]:\n",
+        "        y_max = sunrise_sunset_fig_y_axis_range[1]\n",
+        "    else:\n",
+        "        y_max = sunrise_sunset_fig.data[0].y.max()\n",
+        "    sunrise_sunset_fig.update_yaxes(range=[y_min, y_max])\n",
+        "\n",
+        "    if average_sleep_fig.data[0].y.min() > average_sleep_fig_y_axis_range[0]:\n",
+        "        y_min = average_sleep_fig_y_axis_range[0]\n",
+        "    else:\n",
+        "        y_min = average_sleep_fig.data[0].y.min()\n",
+        "    if average_sleep_fig.data[0].y.max() < average_sleep_fig_y_axis_range[1]:\n",
+        "        y_max = average_sleep_fig_y_axis_range[1]\n",
+        "    else:\n",
+        "        y_max = average_sleep_fig.data[0].y.max()\n",
+        "    average_sleep_fig.update_yaxes(range=[y_min, y_max])\n",
+        "\n",
         "    return sunrise_sunset_fig, average_sleep_fig # , minimum_sleep_fig"
       ]
     },
